--- a/translations/en/LC_MESSAGES/messages.po
+++ b/translations/en/LC_MESSAGES/messages.po
@@ -1,108 +1,59 @@
-# English translations for PROJECT.
-# Copyright (C) 2025 ORGANIZATION
-# This file is distributed under the same license as the PROJECT project.
-# FIRST AUTHOR <EMAIL@ADDRESS>, 2025.
-#
 msgid ""
 msgstr ""
 "Project-Id-Version: PROJECT VERSION\n"
 "Report-Msgid-Bugs-To: EMAIL@ADDRESS\n"
-"POT-Creation-Date: 2025-05-18 18:15+0800\n"
-"PO-Revision-Date: 2025-05-18 18:15+0800\n"
+"POT-Creation-Date: 2024-01-17 10:00+0800\n"
+"PO-Revision-Date: 2024-01-17 10:00+0800\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
-"Language-Team: en <LL@li.org>\n"
 "Language: en\n"
+"Language-Team: en <LL@li.org>\n"
+"Plural-Forms: nplurals=2; plural=(n != 1);\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Plural-Forms: nplurals=2; plural=(n != 1);\n"
-"Generated-By: Babel 2.17.0\n"
+"Generated-By: Babel 2.14.0\n"
 
-#: templates/apply.html:20 templates/apply_change.html:25
-msgid "申请权限"
-msgstr "Apply for permission"
-
-#: templates/apply.html:27
-msgid "请选择要申请的权限："
-msgstr "Please select the permissions to apply for:"
-
-#: templates/apply.html:30
-msgid "管理员"
-msgstr "administrator"
-
-#: templates/apply.html:31
-msgid "API 使用权"
-msgstr "API usage rights"
-
-#: templates/apply.html:34
-msgid "提交申请"
-msgstr "Submit an application"
-
-#: templates/apply.html:38 templates/apply_change.html:65
-msgid "返回仪表盘"
-msgstr "Return to the dashboard"
-
-#: templates/apply_change.html:12
-msgid "权限申请审核"
-msgstr "Authority application review"
-
-#: templates/apply_change.html:24 templates/login.html:14
-#: templates/sign.html:14
-msgid "用户名"
-msgstr "username"
-
-#: templates/apply_change.html:26
-msgid "状态"
-msgstr "state"
-
-#: templates/apply_change.html:27
-msgid "申请理由"
-msgstr "Reason for application"
-
-#: templates/apply_change.html:28
-msgid "操作"
-msgstr "operate"
-
-#: templates/apply_change.html:39
-msgid "待审核"
-msgstr "Pending review"
-
-#: templates/apply_change.html:41
-msgid "已通过"
-msgstr "Passed"
-
-#: templates/apply_change.html:43
-msgid "已拒绝"
-msgstr "Rejected"
-
-#: templates/apply_change.html:52
-msgid "通过"
-msgstr "pass"
-
-#: templates/apply_change.html:53
-msgid "拒绝"
-msgstr "reject"
-
-#: templates/index.html:6
-msgid "主页"
-msgstr "Home page"
-
-#: templates/login.html:5
 msgid "登录界面"
-msgstr "Login interface"
+msgstr "Login Page"
 
-#: templates/login.html:13 templates/login.html:16
 msgid "登录"
-msgstr "Log in"
+msgstr "Login"
 
-#: templates/login.html:15 templates/sign.html:15
+msgid "第三方应用请求访问您的账户"
+msgstr "Third-party application requests access to your account"
+
+msgid "登录后将自动授权访问"
+msgstr "Access will be automatically authorized after login"
+
+msgid "用户名"
+msgstr "Username"
+
 msgid "密码"
-msgstr "password"
+msgstr "Password"
 
-#: templates/sign.html:5
-msgid "注册界面"
-msgstr "Registration interface"
+msgid "还未注册?"
+msgstr "Not registered yet?"
 
-#: templates/sign.html:13 templates/sign.html:16
 msgid "注册"
-msgstr "register"
+msgstr "Sign up"
+
+msgid "用户名或密码错误"
+msgstr "Invalid username or password"
+
+msgid "退出登录"
+msgstr "Logout"
+
+msgid "个人资料"
+msgstr "Profile"
+
+msgid "设置"
+msgstr "Settings"
+
+msgid "语言"
+msgstr "Language"
+
+msgid "English"
+msgstr "English"
+
+msgid "Chinese"
+msgstr "Chinese"
